@@ -1,6 +1,4 @@
 # jdk14-test
-# jdk14-test
-# jdk14-test
-# jdk14-test
-# jdk14-test
-# jdk14-test
+
+$ javac --enable-preview -source 14 com/example/HelloJDK.java 
+$ java --enable-preview com/example/HelloJDK
